[project]
name = "future-ml-01"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "catppuccin>=2.4.1",
    "matplotlib>=3.10.3",
    "numpy>=2.2.5",
    "pandas>=2.2.3",
    "pmdarima>=2.0.4",
    "scikit-learn>=1.6.1",
    "statsmodels>=0.14.4",
]
